# feed_reader

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
feeds/: admin.py  models.py  services.py
feeds/migrations/: 0001_initial.py
templates/: base.html  home.html
