[project]
name = "feed-reader"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-tailwind-cli>=4.6.2",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=7.0.0",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "single"